--- a/Hardware test/WebServer/index.htm
+++ b/Hardware test/WebServer/index.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Arduino SD Card Web Page using Ajax with XML</title>
+        <title>Open Home Automation</title>
         <script>
         function GetArduinoInputs()
         {
@@ -12,16 +12,29 @@
                 if (this.readyState == 4) {
                     if (this.status == 200) {
                         if (this.responseXML != null) {
-                            // extract XML data from XML file (containing switch states and analog value)
-                            document.getElementById("input1").innerHTML =
-                                this.responseXML.getElementsByTagName('button1')[0].childNodes[0].nodeValue;
-                            document.getElementById("input2").innerHTML =
-                                this.responseXML.getElementsByTagName('button2')[0].childNodes[0].nodeValue;
-                            document.getElementById("input3").innerHTML =
-                                this.responseXML.getElementsByTagName('analog1')[0].childNodes[0].nodeValue;
+                            // extract XML data from XML file (containing light states)
+							var count_var = this.responseXML.getElementsByTagName('count')[0].childNodes[0].nodeValue;
+							var string1 = "Light ";
+							var light_string = "light";
+							var xml_string = "";
+							
+                           document.getElementById("input_app").innerHTML = "";
+
+							for( var i = 1; i <= count_var; i++ ) {
+								var element = document.createElement("p");
+							    // Assign different attributes to the element.
+								// construct string
+								xml_string = "";
+								xml_string = xml_string.concat(light_string, i);
+								// set id
+								element.setAttribute("id", light_string.concat(i));
+							    var foo = document.getElementById("input_app");
+							    //Append the element in page (in span).
+							    foo.appendChild(element);
 								
-                            document.getElementById("input_app").innerHTML =
-                                this.responseXML.getElementsByTagName('size')[0].childNodes[0].nodeValue;
+								document.getElementById(light_string.concat(i)).innerHTML = 
+									string1.concat(i, ": ", this.responseXML.getElementsByTagName(xml_string)[0].childNodes[0].nodeValue);
+							}
                         }
                     }
                 }
@@ -29,25 +42,11 @@
             request.open("GET", "ajax_inputs" + nocache, true);
             request.send(null);
             setTimeout('GetArduinoInputs()', 1000);
-			
-			// Dynamic additions to elements
-		    //Create an input type dynamically.
-		    // var element = document.createElement("input"); 
-		    // //Assign different attributes to the element.
-		    // element.setAttribute("type", "button");
-		    // element.setAttribute("value", "button");
-		    // element.setAttribute("name", "button");
-		    // var foo = document.getElementById("input_app");
-		    // //Append the element in page (in span).
-		    // foo.appendChild(element);
         }
     </script>
     </head>
     <body onload="GetArduinoInputs()">
-        <h1>Arduino Inputs from SD Card Web Page using Ajax with XML</h1>
-        <p>Button 1 (pin 7): <span id="input1">...</span></p>
-        <p>Button 2 (pin 8): <span id="input2">...</span></p>
-        <p>Analog (A2): <span id="input3">...</span></p>
-		<p><span id="input_app"></span></p>
+        <h1>Lights and Groups</h1>
+		<p><span id="input_app">Updating...</span></p>
     </body>
 </html>
