Updated webpage post request

--- a/Code/Server/index.htm
+++ b/Code/Server/index.htm
@@ -69,8 +69,11 @@
             // New HTTP Post
             var request = new XMLHttpRequest();
 -           request.open("POST", "", true);
-            // Post contains the Id of the light
--           request.send(this.id);
+
+            // Post contains the Id number of the light
+            // .slice(-1) retuns last character of the light 
+            // ID string
+-           request.send(this.id.slice(-1));
         }
 
     </script>
