Fixed website title and update rate

--- a/Code/Server/index.htm
+++ b/Code/Server/index.htm
@@ -60,7 +60,7 @@
 
             // Delay to periodically send status
             // requests to base station
-            setTimeout('GetArduinoInputs()', 10000);
+            setTimeout('GetArduinoInputs()', 1000);
         }
 
         // Call back for button presses
@@ -79,7 +79,7 @@
     </script>
     </head>
     <body onload="GetArduinoInputs()">
-        <h1>All of the Lights</h1>
+        <h1>Unified &amp Open Home Automation</h1>
 		<p><span id="input_app">Updating...</span></p>
     </body>
 </html>
