update title of device control center

--- a/Code/Server/index.htm
+++ b/Code/Server/index.htm
@@ -47,7 +47,7 @@
                 background: -webkit-linear-gradient(top, #d11 0%, #d00 50%, #610 100%);
             }
         </style>
-        <title>Open Home Automation</title>
+        <title>Device Control Center</title>
         <script>
         function GetArduinoInputs()
         {
